completed the Log in Component

--- a/Frontend-Angular/src/app/components/nav-bar/nav-bar.component.html
+++ b/Frontend-Angular/src/app/components/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
 <header> 
     <ul class="navbar">
       <li class="logo"><img src="assets/Nav-bar-Logo.png" alt="logo"></li>
-      <li><a href="Home.html">Home</a></li>
-      <li><a href="Log-in.html">Sign In</a></li>
-      <li><a href="Sign-up.html">Sign Up</a></li>
-      <li><a href="Student-List.html">Table</a></li>
+      <li><a routerLink="" >Home</a></li>
+      <li><a routerLink="/login">Sign In</a></li>
+      <li><a routerLink="/registration" >Sign Up</a></li>
+      <li><a>Table</a></li>
   </ul>
   </header>
