--- a/Frontend-Angular/src/app/components/registration-form/registration-form.component.html
+++ b/Frontend-Angular/src/app/components/registration-form/registration-form.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <header>Sign Up Form</header>
+    <header>Registration Form</header>
     <form class="form" id="form" enctype="multipart/form-data">
 
       <!-- Account log in info -->
