--- a/Frontend-Angular/src/app/app.component.html
+++ b/Frontend-Angular/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar></app-nav-bar>
-<app-registration-form></app-registration-form>
-<router-outlet></router-outlet>
+<div class="app-container">
+    <router-outlet></router-outlet>
+</div>
