Completed the Table component

--- a/Frontend-Angular/src/app/app.component.html
+++ b/Frontend-Angular/src/app/app.component.html
@@ -1,3 +1,4 @@
+<img src="assets/Background-Log-in.jpeg" alt="background" class="background pic ">
 <app-nav-bar></app-nav-bar>
 <div class="app-container">
     <router-outlet></router-outlet>
