--- a/Frontend-Angular/src/app/components/table/table.component.html
+++ b/Frontend-Angular/src/app/components/table/table.component.html
@@ -1,1 +1,52 @@
-<p>table works!</p>
+<section class="container" id="container">
+    <header class="table-title">Registered Students</header>
+    <table id="student-List"></table>
+</section>
+<div id="student-image-card" class="student-image-card">
+
+
+    <img id="student-profile-pic" src="assets/default-icon2.jpeg" alt="Student Profile pic">
+    <div id="Student-fullname">Githma Senevirathne</div>
+
+    <div class="row">
+        
+            <label>P.No  </label>
+            <p id="Student-Phonenumber">0769145188</p>
+      
+       
+            <label>Birthday </label>
+            <p id="Student-Birthday">2003-2-2</p>
+      
+      
+    </div>
+
+    <div class="row">
+            <label>Email  </label>
+            <p id="Student-Email">Githmaz1.com</p>
+    </div>
+
+    <div class="row">
+        <label>address </label>
+        <p id="Student-address">55/52/hapugala,galle Sri lanka</p>
+    </div>
+
+    <h5>Guardian's details :</h5>
+
+    <div class="row">
+            <label>Guardian's Full name </label>
+            <p id="Guardian-name">I hate my life this </p>
+    </div>
+
+    <div class="row">
+        
+            <label>Guardian's Phone Number </label>
+            <p id="Guardian-Phonenumber">0769145188</p>
+      
+    </div>
+    <div class="row">
+        
+        <label>career </label>
+        <p id="Guardian-career">0769145188</p>
+  
+</div>
+  </div>
