--- a/Frontend-Angular/src/app/app.component.css
+++ b/Frontend-Angular/src/app/app.component.css
@@ -12,3 +12,11 @@ body, html {
     height: 100%;
   }
   
+  .background {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+  }
