--- a/Frontend-Angular/src/app/components/nav-bar/nav-bar.component.html
+++ b/Frontend-Angular/src/app/components/nav-bar/nav-bar.component.html
@@ -4,6 +4,6 @@
       <li><a routerLink="" >Home</a></li>
       <li><a routerLink="/login">Sign In</a></li>
       <li><a routerLink="/registration" >Sign Up</a></li>
-      <li><a>Table</a></li>
+      <li><a routerLink="/table">Table</a></li>
   </ul>
   </header>
