fix the profile picture not showing bug

--- a/Frontend-Angular/src/app/components/registration-form/registration-form.component.html
+++ b/Frontend-Angular/src/app/components/registration-form/registration-form.component.html
@@ -10,7 +10,7 @@
         <div class="left-side">
           <label class="profilePicInput-lable">Profile Picture</label>
           <div class="preview">
-            <img id="profilePicPreview" src="#" alt="Profile Picture Preview"  />
+            <img id="profilePicPreview" [src]="getProfilePicUrl()" alt="Profile Picture Preview"  />
           </div>
         </div>
      
@@ -26,7 +26,7 @@
             </div>  
             <div>
               <label class="custom-input" for="profilePicInput">Select Profile Picture</label>
-              <input type="file" id="profilePicInput"  accept="image/png, image/jpeg, image/jpg"/>
+              <input type="file" (change)="onProfilePicChange($event)" id="profilePicInput"  accept="image/png, image/jpeg, image/jpg"/>
             </div>
         
           </div>
